Fixing paste wrapping

--- a/client/src/Paste/style.scss
+++ b/client/src/Paste/style.scss
@@ -1,5 +1,5 @@
 .paste {    
   .box {
-    white-space: pre;
+    white-space: pre-line;
   }
 }
